<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 继承 Spring Boot 父 POM -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
    </parent>

    <!-- 本项目坐标 -->
    <groupId>com.sphp</groupId>
    <artifactId>sphp-server</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>sphp-server</name>
    <description>智愈先锋 - Java 后端多模块项目</description>

    <!-- 子模块 -->
    <modules>
        <module>sphp-core</module>
        <module>B-backend</module>
        <module>C-backend</module>
        <module>sphp-bootstrap</module>
    </modules>

    <!-- 公共版本管理 -->
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mybatis-plus.version>3.5.14</mybatis-plus.version>
        <jjwt.version>0.12.6</jjwt.version>
        <redis.version>3.1.0</redis.version>
        <springdoc.version>2.8.12</springdoc.version>
        <sa-token.version>1.40.0</sa-token.version>
        <!-- 注：设计文档写 0.4.3，但 Maven 中央仓库 jbcrypt 最新仅为 0.4 -->
        <jbcrypt.version>0.4</jbcrypt.version>
    </properties>

    <!-- 依赖版本统一管理（子模块按需引入，不自动继承） -->
    <dependencyManagement>
        <dependencies>
            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- Redis -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${redis.version}</version>
            </dependency>

            <!-- RabbitMQ 已有springboot自动管理,各自模块自己添加-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-amqp</artifactId>-->
<!--            </dependency>-->

            <!-- PostgreSQL 42.7-->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <!-- SpringDoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Sa-Token（B端认证框架） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-jwt</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!-- jBCrypt（B端密码哈希，兼容BCrypt） -->
            <dependency>
                <groupId>org.mindrot</groupId>
                <artifactId>jbcrypt</artifactId>
                <version>${jbcrypt.version}</version>
            </dependency>


            <!-- 内部共享模块 -->
            <dependency>
                <groupId>com.sphp</groupId>
                <artifactId>sphp-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sphp</groupId>
                <artifactId>B-backend</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sphp</groupId>
                <artifactId>C-backend</artifactId>
                <version>${project.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
